force-app/main/default/objects/PreScreener_Survey__c/PreScreener_Survey__c.object-meta.xml
<CustomObject>
    <label>Screener</label>
    <nameField>
        <displayFormat>S-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Screeners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>