force-app/main/default/objects/PreScreener_Survey__c/fields/Link_to_Pre_screening__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Pre_screening__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Link to Pre-screening</label>
    <required>true</required>
    <type>Url</type>
</CustomField>