force-app/main/default/objects/PreScreener_Survey__c/fields/MRR__c.field-meta.xml
<CustomField>
    <fullName>MRR__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field must be checked if the study requires a medical record review.</inlineHelpText>
    <label>MRR</label>
    <type>Checkbox</type>
</CustomField>