force-app/main/default/objects/PreScreener_Survey__c/fields/Prescreener__c.field-meta.xml
<CustomField>
    <fullName>Prescreener__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is getting used to display pre screener to RP</description>
    <inlineHelpText>This field must be checked if the study requires pre-screening.</inlineHelpText>
    <label>Prescreener</label>
    <type>Checkbox</type>
</CustomField>