force-app/main/default/objects/PreScreener_Survey__c/fields/ProviderName__c.field-meta.xml
<CustomField>
    <fullName>ProviderName__c</fullName>
    <label>ProviderName</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>surveygizmo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>