force-app/main/default/objects/PreScreener_Survey__c/fields/Study__c.field-meta.xml
<CustomField>
    <fullName>Study__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clinical Trial Profile</label>
    <referenceTo>Clinical_Trial_Profile__c</referenceTo>
    <relationshipLabel>Screeners</relationshipLabel>
    <relationshipName>PreScreener_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>