force-app/main/default/objects/PreScreener_Survey__c/fields/Survey_Name__c.field-meta.xml
<CustomField>
    <fullName>Survey_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Screener Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>