force-app/main/default/objects/PreScreener_Survey__c/recordTypes/Study_Specific.recordType-meta.xml
<RecordType>
    <fullName>Study_Specific</fullName>
    <active>true</active>
    <label>Study Specific</label>
</RecordType>