force-app/main/default/objects/PreScreener_Survey__c/validationRules/MRR_cannot_be_prescreener.validationRule-meta.xml
<ValidationRule>
    <fullName>MRR_cannot_be_prescreener</fullName>
    <active>true</active>
    <description>MRR and prescrenner checkbox cannot be checked toghther</description>
    <errorConditionFormula>MRR__c  &amp;&amp;  Prescreener__c</errorConditionFormula>
    <errorMessage>A MRR cannot be a Prescreener and vice-versa</errorMessage>
</ValidationRule>