force-app/main/default/objects/PreScreener_Survey__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Survey_Name__c</columns>
    <columns>Primary__c</columns>
    <columns>Study__c</columns>
    <columns>Link_to_Pre_screening__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>