force-app/main/default/objects/PreScreener_Survey__c/listViews/General_Prescreener.listView-meta.xml
<ListView>
    <fullName>General_Prescreener</fullName>
    <columns>NAME</columns>
    <columns>Survey_Name__c</columns>
    <columns>Study__c</columns>
    <columns>ProviderName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>PreScreener_Survey__c.General</value>
    </filters>
    <label>General Prescreener</label>
    <language>en_US</language>
</ListView>