force-app/main/default/objects/PreScreener_Survey__c/listViews/Study_Specific_Prescreener.listView-meta.xml
<ListView>
    <fullName>Study_Specific_Prescreener</fullName>
    <columns>NAME</columns>
    <columns>Survey_Name__c</columns>
    <columns>Study__c</columns>
    <columns>MRR__c</columns>
    <columns>Prescreener__c</columns>
    <columns>Primary__c</columns>
    <columns>Link_to_Pre_screening__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>PreScreener_Survey__c.Study_Specific</value>
    </filters>
    <label>Study Specific Prescreener</label>
    <language>en_US</language>
</ListView>